objects/ASI_CRM_Call_Monthly_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <label>Accounts Additional Field</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Call Monthly Summaries</relationshipLabel>
        <relationshipName>Call_Monthly_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_Call_Log__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Call Log</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_Call_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Call Plan</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Summary_Start_Date__c</fullName>
        <label>Summary Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Call Monthly Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_Summary_Start_Date__c</columns>
        <columns>ASI_CRM_Account__c</columns>
        <columns>ASI_CRM_Number_of_Call_Plan__c</columns>
        <columns>ASI_CRM_Number_of_Call_Log__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>Call Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Monthly Summaries</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Call_Monthly_Summary</fullName>
        <active>true</active>
        <label>CN Call Monthly Summary</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>